--- a/arch/arm64/configs/rockchip_linux_defconfig
+++ b/arch/arm64/configs/rockchip_linux_defconfig
@@ -3032,7 +3032,7 @@ CONFIG_BCMDHD_NVRAM_PATH="/lib/firmware/ap6275p/nvram.txt"
 CONFIG_RTL8852BE=m
 CONFIG_RTL8852BU=m
 CONFIG_RTL8821CS=y
-CONFIG_MAC80211_HWSIM=y
+CONFIG_MAC80211_HWSIM=m
 CONFIG_USB_NET_RNDIS_WLAN=y
 CONFIG_VIRT_WIFI=y
 
